# Aegis-SARN

./: .gitignore  README.md  TESTING.txt  pyproject.toml
.github/workflows/: ci.yml
docs/: aegis-x-grand-plan.md  architecture.md  artifacts.md  benchmarks.md  data.md  datasets.md  decision-log.md  development.md  framework.md  glossary.md  index.md  interfaces.md  interpretability.md  memory.md  model-card-sarn-dense.md  model.md  open-questions.md  principles.md  references.md  repository-layout.md  research-matrix.md  risks.md  roadmap.md  runtime.md  safety.md  training.md  vision.md
src/aegis_sarn/: __init__.py  __main__.py  cli.py  config.py  phase3.py  phase4.py  phase5.py  phase6.py  phase7.py  phase8.py  registry.py  reporting.py
src/aegis_sarn/aegis/: __init__.py  backends.py  controller.py  schemas.py  trace.py
src/aegis_sarn/eval/: __init__.py  benchmark.py  harness.py  loss.py  tasks.py
src/aegis_sarn/sarn/: __init__.py  checkpoint.py  data.py  experts.py  generation.py  graph.py  layers.py  memory.py  model.py  tokenizer.py  training.py  workspace.py
src/aegis_sarn/utils/: __init__.py  io.py  metadata.py  seed.py
tests/: conftest.py  test_aegis.py  test_checkpoint.py  test_cli.py  test_config.py  test_data.py  test_generation.py  test_model.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_training.py
