[build-system]
requires = ['setuptools>=68']
build-backend = 'setuptools.build_meta'

[project]
name = 'aegis-sarn'
version = '0.1.0'
description = 'Phase 1 SARN-Dense baseline and Aegis runtime spine'
readme = 'README.md'
requires-python = '>=3.11'
license = {file = 'LICENSE'}
dependencies = ['torch>=2.2']

[project.optional-dependencies]
dev = ['pytest>=8']

[project.scripts]
aegis-sarn = 'aegis_sarn.cli:main'

[tool.setuptools.packages.find]
where = ['src']

[tool.pytest.ini_options]
addopts = '-q -p no:cacheprovider'
testpaths = ['tests']
pythonpath = ['src']
